# cersei

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bench-gemini.md  parse_csv.py  run_benchmark.sh  run_tests.sh  run_tool_bench_claude.sh  run_tool_bench_codex.sh
bench/: abstract_tbench.py  analyze_failures.py  failure_patterns.txt  pyproject.toml  report.sh  run.sh  run_dry_tb.sh  run_tb_full.sh
bench/general-agents/: README.md  _common.py  aggregate.py  bench_agno.py  bench_crewai.py  bench_langgraph.py  bench_pydantic_ai.py  pyproject.toml  run.sh
bench/general-agents/results/: agno.json  cersei.json  crewai.json  langgraph.json  pydantic_ai.json  summary.json
bench/long-mem/: .gitignore  Cargo.toml  README.md  setup.sh
bench/long-mem/results/: a-baseline-jsonl-longmemeval_s.json  a-baseline-jsonl-rows-longmemeval_s.json  b-embed-only-longmemeval_s.json  b-embed-only-rows-longmemeval_s.json  c-graph-substring-longmemeval_s.json  c-graph-substring-rows-longmemeval_s.json  d-hybrid-embed-graph-longmemeval_s.json  d-hybrid-embed-graph-rows-longmemeval_s.json  summary-longmemeval_s.json
bench/long-mem/results-gemini/: a-baseline-jsonl-longmemeval_s.json  a-baseline-jsonl-rows-longmemeval_s.json  b-embed-only-longmemeval_s.json  b-embed-only-rows-longmemeval_s.json  c-graph-substring-longmemeval_s.json  c-graph-substring-rows-longmemeval_s.json  d-hybrid-embed-graph-longmemeval_s.json  d-hybrid-embed-graph-rows-longmemeval_s.json  summary-longmemeval_s.json
bench/long-mem/results-gemini-smoke/: b-embed-only-longmemeval_s.json  b-embed-only-rows-longmemeval_s.json  d-hybrid-embed-graph-longmemeval_s.json  d-hybrid-embed-graph-rows-longmemeval_s.json  summary-longmemeval_s.json
bench/long-mem/results-smoke20/: a-baseline-jsonl-longmemeval_s.json  a-baseline-jsonl-rows-longmemeval_s.json  b-embed-only-longmemeval_s.json  b-embed-only-rows-longmemeval_s.json  c-graph-substring-longmemeval_s.json  c-graph-substring-rows-longmemeval_s.json  d-hybrid-embed-graph-longmemeval_s.json  d-hybrid-embed-graph-rows-longmemeval_s.json  summary-longmemeval_s.json
bench/long-mem/results-speed/: d-hybrid-embed-graph-longmemeval_s.json  d-hybrid-embed-graph-rows-longmemeval_s.json  summary-longmemeval_s.json
bench/long-mem/results-tune1/: d-hybrid-embed-graph-longmemeval_s.json  d-hybrid-embed-graph-rows-longmemeval_s.json  summary-longmemeval_s.json
bench/long-mem/src/: dataset.rs  judge.rs  main.rs  mastra_prompts.rs  omega_prompts.rs  query_expand.rs  report.rs  runner.rs
bench/long-mem/src/configs/: baseline.rs  embed.rs  graph.rs  hybrid.rs  mod.rs
bench/spider2-dbt/: Cargo.toml  README.md  setup.sh
bench/spider2-dbt/prompts/: auditor.md  system.md  verifier.md
bench/spider2-dbt/skills/: dbt-debugging.md  dbt-workflow.md  dbt-write.md  duckdb-sql.md
bench/spider2-dbt/src/: comparator.rs  dataset.rs  dates.rs  main.rs  report.rs  runner.rs  workdir.rs
bench/spider2-dbt/src/tools/: dbt_project_map.rs  duckdb_query.rs  mod.rs
crates/abstract-cli/: Cargo.toml
crates/abstract-cli/benchmarks/: REPORT.md  memory_bench.rs
crates/abstract-cli/src/: app.rs  config.rs  init.rs  input.rs  login.rs  main.rs  permissions.rs  prompt.rs  render.rs  repl.rs  sessions.rs  signals.rs  status.rs  theme.rs
crates/abstract-cli/src/commands/: clear.rs  commit.rs  compact.rs  compression.rs  config_cmd.rs  cost.rs  diff.rs  help.rs  memory.rs  mod.rs  model.rs  resume.rs  review.rs
crates/abstract-cli/src/tui/: app.rs  event_loop.rs  layout.rs  markdown.rs  mod.rs  scroll.rs  theme.rs  virtual_list.rs
crates/abstract-cli/src/tui/widgets/: diff_inline.rs  footer.rs  graph.rs  header.rs  input.rs  messages.rs  mod.rs  overlay.rs  side_panel.rs  status.rs  tool_call.rs
crates/cersei-compression/: Cargo.toml  LICENSE  README.md
crates/cersei-compression/src/: ansi.rs  code.rs  dispatch.rs  level.rs  lib.rs  toml_rules.rs  truncate.rs
crates/cersei-compression/src/rules/: cargo.toml  docker.toml  generic.toml  git.toml  npm.toml  pnpm.toml  pytest.toml
crates/cersei-compression/tests/: savings.rs
crates/cersei-embeddings/: Cargo.toml
crates/cersei-embeddings/src/: error.rs  factory.rs  gemini.rs  index.rs  lib.rs  openai.rs  provider.rs  store.rs
crates/cersei-embeddings/tests/: smoke.rs
crates/cersei-lsp/: Cargo.toml
crates/cersei-lsp/src/: client.rs  config.rs  jsonrpc.rs  lib.rs  manager.rs  types.rs
crates/cersei-memory/: Cargo.toml
crates/cersei-memory/src/: claudemd.rs  embedding_memory.rs  graph.rs  graph_migrate.rs  lib.rs  manager.rs  memdir.rs  session_storage.rs
crates/cersei-skills/: Cargo.toml
crates/cersei-skills/src/: lib.rs  parser.rs  registry.rs  security.rs
crates/cersei-tools/: Cargo.toml
crates/cersei-tools/src/: apply_patch.rs  ask_user.rs  bash.rs  bash_classifier.rs  code_search.rs  config_tool.rs  cron.rs  exa_search.rs  file_edit.rs  file_history.rs  file_read.rs  file_snapshot.rs  file_watcher.rs  file_write.rs  git_utils.rs  glob_tool.rs  grep_tool.rs  lib.rs  lsp_tool.rs  notebook_edit.rs  permissions.rs  plan_mode.rs  powershell.rs  remote_trigger.rs  send_message.rs  skill_tool.rs  sleep.rs  synthetic_output.rs  tasks.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree.rs
crates/cersei-tools/src/skills/: bundled.rs  discovery.rs  mod.rs
crates/cersei-tools/src/tool_primitives/: bash_safety.rs  code_intel.rs  diff.rs  fs.rs  git.rs  http.rs  mod.rs  process.rs  search.rs
docs/: package-lock.json  package.json
examples/: benchmark_io.rs  coding_agent.rs  custom_provider.rs  custom_tools.rs  hooks_middleware.rs  multi_listener.rs  oauth_login.rs  resumable_session.rs  simple_agent.rs  streaming_events.rs  stress_core_infrastructure.rs  stress_memory.rs  stress_orchestration.rs  stress_skills.rs  stress_tools.rs  usage_report.rs
examples/benchmark/: Cargo.toml  README.md
examples/benchmark/src/: main.rs
macros/: my_temp_macro.sql  temp_query.sql
models/: asana__team.sql  asana__user.sql  (+1 more)
tools/gemini-doctor/: Cargo.toml
tools/gemini-doctor/src/: main.rs
wiki/: 02-providers.md  (+9 more)
(+519 files in other folders)
