[package]
name = "spider2-dbt-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Spider2.0 dbt benchmark for the Cersei agent stack — beats SignalPilot 51.6%"
publish = false

[[bin]]
name = "spider2-dbt-bench"
path = "src/main.rs"

[dependencies]
cersei-types     = { workspace = true }
cersei-provider  = { workspace = true }
cersei-agent     = { workspace = true }
cersei-tools     = { workspace = true }
cersei-skills    = { workspace = true }

tokio             = { workspace = true }
async-trait       = { workspace = true }
anyhow            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
chrono            = { workspace = true }
clap              = { version = "4", features = ["derive"] }
tempfile          = { workspace = true }
walkdir           = { workspace = true }
duckdb            = { version = "1", features = ["bundled"] }
fs_extra          = "1.3"
dirs              = { workspace = true }
dotenvy           = "0.15"
futures           = { workspace = true }
parking_lot       = { workspace = true }
serde_yaml        = "0.9"
