[package]
name = "abstract-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance Rust-native CLI coding agent"
default-run = "abstract"

[[bin]]
name = "abstract"
path = "src/main.rs"

[features]
default = ["graph"]
graph = ["cersei-memory/graph", "dep:grafeo"]

[dependencies]
# Cersei SDK
cersei = { path = "../cersei" }
cersei-types = { path = "../cersei-types" }
cersei-provider = { path = "../cersei-provider" }
cersei-tools = { path = "../cersei-tools" }
cersei-embeddings = { path = "../cersei-embeddings" }
cersei-lsp = { path = "../cersei-lsp" }
which = { workspace = true }
cersei-agent = { path = "../cersei-agent" }
cersei-memory = { path = "../cersei-memory" }
cersei-hooks = { path = "../cersei-hooks" }
cersei-mcp = { path = "../cersei-mcp" }
cersei-compression = { path = "../cersei-compression" }

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal / TUI
crossterm = "0.28"
ratatui = "0.29"
termimad = "0.30"

# Markdown + Syntax Highlighting
pulldown-cmark = "0.12"
syntect = { version = "5", features = ["default-syntaxes", "default-themes"] }

# Input (legacy — kept for non-TUI fallback)
rustyline = "15"

# Config
toml = { workspace = true }
dirs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
ctrlc = "3"

# OAuth / HTTP (for login flow)
reqwest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
grafeo = { version = "0.5", features = ["gql", "grafeo-file", "wal"], optional = true }

[[example]]
name = "memory_bench"
path = "benchmarks/memory_bench.rs"
