[package]
name = "cersei-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LSP client for the Cersei coding agent SDK"

[dependencies]
tokio = { workspace = true, features = ["process", "io-util", "sync", "time", "rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = "6"
which = "7"
tracing = { workspace = true }
thiserror = { workspace = true }
